# Retirement

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
.agent/: project-plan.md  research.md
apps/api/: README.md  pyproject.toml
apps/api/alembic/: README.md
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  router.py
apps/api/app/api/routes/: __init__.py  calculations.py  health.py
apps/api/app/db/: __init__.py  base.py
apps/api/app/domain/: __init__.py  retirement.py
apps/api/app/schemas/: __init__.py  planner.py
apps/api/tests/: test_health.py  test_retirement.py
apps/web/: package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/planner/: route.ts
apps/web/components/: field-hint.tsx  planner-chart.tsx  planner-shell.tsx  summary-card.tsx
apps/web/lib/: api.ts  format.ts  planner-view.ts  planner.ts  presets.ts  types.ts
apps/web/lib/storage/: scenarios.ts
apps/web/tests/: planner-view.test.ts  planner.test.ts  storage.test.ts
apps/web/tests/e2e/: home.spec.ts
docs/: architecture.md  assumptions.md  math-spec.md  milestones.md  product-spec.md
fixtures/: retirement-scenarios.json
